k8s/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: template-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template-api
  template:
    metadata:
      labels:
        app: template-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: ghcr.io/olyxz16/go-chi-oauth-psql/api:latest
          ports:
            - containerPort: 3000
