k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: template-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
